<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_task"
          android:icon="@drawable/new_ic"
          android:title="@string/menu_task"
          android:visible="true"
          android:showAsAction="never"/>
    
    <item android:id="@+id/menu_save"
          android:icon="@drawable/save_ic"
          android:title="@string/menu_save"
          android:visible="true"
          android:showAsAction="never|withText" />  
    
    <item android:id="@+id/menu_new"
          android:icon="@drawable/ic_action_new_task"
          android:title="@string/menu_new"
          android:visible="true"
          android:showAsAction="always|withText" />
    
    <item android:id="@+id/menu_messages"
          android:icon="@drawable/ic_action_messages"
          android:title="@string/menu_messages"
          android:visible="true"
          android:showAsAction="always|withText" />
    
    <item android:id="@+id/menu_settings"
          android:icon="@drawable/settings"
          android:title="@string/menu_settings"
          android:visible="true"
          android:showAsAction="always|withText" />
    
</menu>